--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <link rel="stylesheet" href="./public/css/fancybox.css" media="print" onload="this.media='all'">
     <link rel="stylesheet" href="./public/css/swiper.css" media="print" onload="this.media='all'">
     
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 
 
 
@@ -811,45 +812,130 @@
       space-between="30" centered-slides="true">
         <swiper-slide class ="!-mr-2 lg:!mr-[30px]">
           <p class="absolute bottom-0 left-0 z-40 text-sm tracking-widest text-left text-white uppercase lg:top-0 font-bebas ml-7 lg:mt-7 mb-7 sm:text-xl lg:text-4xl lg:mb-2">Lorem ipsum dolor sit amet </p>
-          <a href=""><i class="absolute top-0 right-0 z-40 mt-4 text-sm duration-200 hover:text-white/80 hover:scale-110 text-white/50 lg:text-lg mr-7 lg:mt-7 fa-solid fa-arrow-up-right-from-square"></i></a>
-          <div class="absolute bottom-0 z-30 w-full h-28 lg:h-72 bg-gradient-to-b from-transparent to-black"></div>
+            <a href="">
+            <svg 
+              xmlns="http://www.w3.org/2000/svg" 
+              class="absolute top-0 right-0 z-40 w-6 h-6 mt-4 text-sm duration-200 hover:text-white/80 hover:scale-110 text-white/50 lg:text-lg mr-7 lg:mt-7" 
+              fill="currentColor" 
+              viewBox="0 0 512 512"
+            >
+              <path 
+                d="M384 320c-17.7 0-32 14.3-32 32v96H64V160h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H64C28.7 96 0 124.7 0 160v288c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V352c0-17.7-14.3-32-32-32zm120.5-304.5c-12.5-12.5-32.8-12.5-45.3 0L320 134.6V96c0-17.7-14.3-32-32-32s-32 14.3-32 32V224c0 17.7 14.3 32 32 32H448c17.7 0 32-14.3 32-32s-14.3-32-32-32h-38.6l119.4-119.4c12.5-12.5 12.5-32.8 0-45.3z"
+              />
+            </svg>
+          </a>
+          
+           <div class="absolute bottom-0 z-30 w-full h-20 lg:h-72 bg-gradient-to-b from-transparent to-black"></div>
           <div class="absolute top-0 z-20 hidden w-full h-12 lg:block md:h-32 bg-gradient-to-t from-transparent to-black/30"></div>
-          <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover object-bottom" src="./public/images/kelas-rpl/kelas-rpl-10-11.webp" alt="Website Kelas RPL" width="100%" height="100%">
+          <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover object-bottom" src="./public/images/website/website1.webp" alt="Website Kelas RPL" width="100%" height="100%">
         </swiper-slide>
         <swiper-slide class="!-mr-2 lg:!mr-[30px]">
           <p class="absolute bottom-0 left-0 z-40 text-sm tracking-widest text-left text-white uppercase lg:top-0 font-bebas ml-7 lg:mt-7 mb-7 sm:text-xl lg:text-4xl lg:mb-2">Lorem ipsum dolor sit amet </p>
-          <a href=""><i class="absolute top-0 right-0 z-40 mt-4 text-sm duration-200 hover:text-white/80 hover:scale-110 text-white/50 lg:text-lg mr-7 lg:mt-7 fa-solid fa-arrow-up-right-from-square"></i></a>
-          <div class="absolute bottom-0 z-30 w-full h-28 lg:h-72 bg-gradient-to-b from-transparent to-black"></div>
+            <a href="">
+            <svg 
+              xmlns="http://www.w3.org/2000/svg" 
+              class="absolute top-0 right-0 z-40 w-6 h-6 mt-4 text-sm duration-200 hover:text-white/80 hover:scale-110 text-white/50 lg:text-lg mr-7 lg:mt-7" 
+              fill="currentColor" 
+              viewBox="0 0 512 512"
+            >
+              <path 
+                d="M384 320c-17.7 0-32 14.3-32 32v96H64V160h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H64C28.7 96 0 124.7 0 160v288c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V352c0-17.7-14.3-32-32-32zm120.5-304.5c-12.5-12.5-32.8-12.5-45.3 0L320 134.6V96c0-17.7-14.3-32-32-32s-32 14.3-32 32V224c0 17.7 14.3 32 32 32H448c17.7 0 32-14.3 32-32s-14.3-32-32-32h-38.6l119.4-119.4c12.5-12.5 12.5-32.8 0-45.3z"
+              />
+            </svg>
+          </a>
+          <div class="absolute bottom-0 z-30 w-full h-20 lg:h-72 bg-gradient-to-b from-transparent to-black"></div>
           <div class="absolute top-0 z-20 hidden w-full h-12 lg:block md:h-32 bg-gradient-to-t from-transparent to-black/30"></div>
-          <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover" src="./public/images/kelas-rpl/kelas-rpl-10-11.webp" alt="Website Kelas RPL" width="100%" height="100%">
+          <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover" src="./public/images/website/website2.webp" alt="Website Kelas RPL" width="100%" height="100%">
         </swiper-slide>
         <swiper-slide class="!-mr-2 lg:!mr-[30px]">
           <p class="absolute bottom-0 left-0 z-40 text-sm tracking-widest text-left text-white uppercase lg:top-0 lg:text-4xl sm:text-xl font-bebas ml-7 lg:mt-7 mb-7 lg:mb-2">Lorem ipsum dolor sit amet </p>
-          <a href=""><i class="absolute top-0 right-0 z-40 mt-4 text-sm duration-200 hover:text-white/80 hover:scale-110 text-white/50 lg:text-lg mr-7 lg:mt-7 fa-solid fa-arrow-up-right-from-square"></i></a>
-          <div class="absolute bottom-0 z-30 w-full h-28 lg:h-72 bg-gradient-to-b from-transparent to-black"></div>
+            <a href="">
+            <svg 
+              xmlns="http://www.w3.org/2000/svg" 
+              class="absolute top-0 right-0 z-40 w-6 h-6 mt-4 text-sm duration-200 hover:text-white/80 hover:scale-110 text-white/50 lg:text-lg mr-7 lg:mt-7" 
+              fill="currentColor" 
+              viewBox="0 0 512 512"
+            >
+              <path 
+                d="M384 320c-17.7 0-32 14.3-32 32v96H64V160h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H64C28.7 96 0 124.7 0 160v288c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V352c0-17.7-14.3-32-32-32zm120.5-304.5c-12.5-12.5-32.8-12.5-45.3 0L320 134.6V96c0-17.7-14.3-32-32-32s-32 14.3-32 32V224c0 17.7 14.3 32 32 32H448c17.7 0 32-14.3 32-32s-14.3-32-32-32h-38.6l119.4-119.4c12.5-12.5 12.5-32.8 0-45.3z"
+              />
+            </svg>
+          </a>
+          <div class="absolute bottom-0 z-30 w-full h-20 lg:h-72 bg-gradient-to-b from-transparent to-black"></div>
           <div class="absolute top-0 z-20 hidden w-full h-12 lg:block md:h-32 bg-gradient-to-t from-transparent to-black/30"></div>
-          <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover object-bottom" src="./public/images/kelas-rpl/kelas-rpl-10-11.webp" alt="Website Kelas RPL" width="100%" height="100%">
+          <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover object-bottom" src="./public/images/website/website3.webp" alt="Website Kelas RPL" width="100%" height="100%">
         </swiper-slide>
         <swiper-slide class="!-mr-2 lg:!mr-[30px]">
           <p class="absolute bottom-0 left-0 z-40 text-sm tracking-widest text-left text-white uppercase lg:top-0 lg:text-4xl sm:text-xl font-bebas ml-7 lg:mt-7 mb-7 lg:mb-2">Lorem ipsum dolor sit amet </p>
-          <a href=""><i class="absolute top-0 right-0 z-40 mt-4 text-sm duration-200 hover:text-white/80 hover:scale-110 text-white/50 lg:text-lg mr-7 lg:mt-7 fa-solid fa-arrow-up-right-from-square"></i></a>
-          <div class="absolute bottom-0 z-30 w-full h-28 lg:h-72 bg-gradient-to-b from-transparent to-black"></div>
+            <a href="">
+            <svg 
+              xmlns="http://www.w3.org/2000/svg" 
+              class="absolute top-0 right-0 z-40 w-6 h-6 mt-4 text-sm duration-200 hover:text-white/80 hover:scale-110 text-white/50 lg:text-lg mr-7 lg:mt-7" 
+              fill="currentColor" 
+              viewBox="0 0 512 512"
+            >
+              <path 
+                d="M384 320c-17.7 0-32 14.3-32 32v96H64V160h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H64C28.7 96 0 124.7 0 160v288c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V352c0-17.7-14.3-32-32-32zm120.5-304.5c-12.5-12.5-32.8-12.5-45.3 0L320 134.6V96c0-17.7-14.3-32-32-32s-32 14.3-32 32V224c0 17.7 14.3 32 32 32H448c17.7 0 32-14.3 32-32s-14.3-32-32-32h-38.6l119.4-119.4c12.5-12.5 12.5-32.8 0-45.3z"
+              />
+            </svg>
+          </a>
+          <div class="absolute bottom-0 z-30 w-full h-20 lg:h-72 bg-gradient-to-b from-transparent to-black"></div>
           <div class="absolute top-0 z-20 hidden w-full h-12 lg:block md:h-32 bg-gradient-to-t from-transparent to-black/30"></div>
-          <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover" src="./public/images/kelas-rpl/kelas-rpl-10-11.webp" alt="Website Kelas RPL" width="100%" height="100%">
+          <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover" src="./public/images/website/website4.webp" alt="Website Kelas RPL" width="100%" height="100%">
         </swiper-slide>
         <swiper-slide class="!-mr-2 lg:!mr-[30px]">
           <p class="absolute bottom-0 left-0 z-40 text-sm tracking-widest text-left text-white uppercase lg:top-0 lg:text-4xl sm:text-xl font-bebas ml-7 lg:mt-7 mb-7 lg:mb-2">Lorem ipsum dolor sit amet</p>
-          <a href=""><i class="absolute top-0 right-0 z-40 mt-4 text-sm duration-200 hover:text-white/80 hover:scale-110 text-white/50 lg:text-lg mr-7 lg:mt-7 fa-solid fa-arrow-up-right-from-square"></i></a>
-          <div class="absolute bottom-0 z-30 w-full h-28 lg:h-72 bg-gradient-to-b from-transparent to-black"></div>
+            <a href="">
+            <svg 
+              xmlns="http://www.w3.org/2000/svg" 
+              class="absolute top-0 right-0 z-40 w-6 h-6 mt-4 text-sm duration-200 hover:text-white/80 hover:scale-110 text-white/50 lg:text-lg mr-7 lg:mt-7" 
+              fill="currentColor" 
+              viewBox="0 0 512 512"
+            >
+              <path 
+                d="M384 320c-17.7 0-32 14.3-32 32v96H64V160h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H64C28.7 96 0 124.7 0 160v288c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V352c0-17.7-14.3-32-32-32zm120.5-304.5c-12.5-12.5-32.8-12.5-45.3 0L320 134.6V96c0-17.7-14.3-32-32-32s-32 14.3-32 32V224c0 17.7 14.3 32 32 32H448c17.7 0 32-14.3 32-32s-14.3-32-32-32h-38.6l119.4-119.4c12.5-12.5 12.5-32.8 0-45.3z"
+              />
+            </svg>
+          </a>
+          <div class="absolute bottom-0 z-30 w-full h-20 lg:h-72 bg-gradient-to-b from-transparent to-black"></div>
           <div class="absolute top-0 z-20 hidden w-full h-12 lg:block md:h-32 bg-gradient-to-t from-transparent to-black/30"></div>
-          <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover" src="./public/images/kelas-rpl/kelas-rpl-10-11.webp" alt="Website Kelas RPL" width="100%" height="100%">
+          <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover" src="./public/images/website/website5.webp" alt="Website Kelas RPL" width="100%" height="100%">
         </swiper-slide>
         <swiper-slide class="!-mr-2 lg:!mr-[30px]">
           <p class="absolute bottom-0 left-0 z-40 text-sm tracking-widest text-left text-white uppercase lg:top-0 lg:text-4xl sm:text-xl font-bebas ml-7 lg:mt-7 mb-7 lg:mb-2">Lorem ipsum dolor sit amet </p>
-          <a href=""><i class="absolute top-0 right-0 z-40 mt-4 text-sm duration-200 hover:text-white/80 hover:scale-110 text-white/50 lg:text-lg mr-7 lg:mt-7 fa-solid fa-arrow-up-right-from-square"></i></a>
-          <div class="absolute bottom-0 z-30 w-full h-28 lg:h-72 bg-gradient-to-b from-transparent to-black"></div>
+            <a href="">
+            <svg 
+              xmlns="http://www.w3.org/2000/svg" 
+              class="absolute top-0 right-0 z-40 w-6 h-6 mt-4 text-sm duration-200 hover:text-white/80 hover:scale-110 text-white/50 lg:text-lg mr-7 lg:mt-7" 
+              fill="currentColor" 
+              viewBox="0 0 512 512"
+            >
+              <path 
+                d="M384 320c-17.7 0-32 14.3-32 32v96H64V160h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H64C28.7 96 0 124.7 0 160v288c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V352c0-17.7-14.3-32-32-32zm120.5-304.5c-12.5-12.5-32.8-12.5-45.3 0L320 134.6V96c0-17.7-14.3-32-32-32s-32 14.3-32 32V224c0 17.7 14.3 32 32 32H448c17.7 0 32-14.3 32-32s-14.3-32-32-32h-38.6l119.4-119.4c12.5-12.5 12.5-32.8 0-45.3z"
+              />
+            </svg>
+          </a>
+          <div class="absolute bottom-0 z-30 w-full h-20 lg:h-72 bg-gradient-to-b from-transparent to-black"></div>
           <div class="absolute top-0 z-20 hidden w-full h-12 lg:block md:h-32 bg-gradient-to-t from-transparent to-black/30"></div>
-          <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover" src="./public/images/kelas-rpl/kelas-rpl-10-11.webp" alt="Website Kelas RPL" width="100%" height="100%">
+          <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover" src="./public/images/website/website6.webp" alt="Website Kelas RPL" width="100%" height="100%">
+        </swiper-slide>
+        <swiper-slide class="!-mr-2 lg:!mr-[30px]">
+          <p class="absolute bottom-0 left-0 z-40 text-sm tracking-widest text-left text-white uppercase lg:top-0 lg:text-4xl sm:text-xl font-bebas ml-7 lg:mt-7 mb-7 lg:mb-2">Lorem ipsum dolor sit amet </p>
+            <a href="">
+            <svg 
+              xmlns="http://www.w3.org/2000/svg" 
+              class="absolute top-0 right-0 z-40 w-6 h-6 mt-4 text-sm duration-200 hover:text-white/80 hover:scale-110 text-white/50 lg:text-lg mr-7 lg:mt-7" 
+              fill="currentColor" 
+              viewBox="0 0 512 512"
+            >
+              <path 
+                d="M384 320c-17.7 0-32 14.3-32 32v96H64V160h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H64C28.7 96 0 124.7 0 160v288c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V352c0-17.7-14.3-32-32-32zm120.5-304.5c-12.5-12.5-32.8-12.5-45.3 0L320 134.6V96c0-17.7-14.3-32-32-32s-32 14.3-32 32V224c0 17.7 14.3 32 32 32H448c17.7 0 32-14.3 32-32s-14.3-32-32-32h-38.6l119.4-119.4c12.5-12.5 12.5-32.8 0-45.3z"
+              />
+            </svg>
+          </a>
+          <div class="absolute bottom-0 z-30 w-full h-20 lg:h-72 bg-gradient-to-b from-transparent to-black"></div>
+          <div class="absolute top-0 z-20 hidden w-full h-12 lg:block md:h-32 bg-gradient-to-t from-transparent to-black/30"></div>
+          <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover" src="./public/images/website/website7.webp" alt="Website Kelas RPL" width="100%" height="100%">
         </swiper-slide>
       </swiper-container>
     </div>
