--- a/kelas.html
+++ b/kelas.html
@@ -325,8 +325,19 @@ margin: 0;
         </div>
       </div>
     </div>
+    <div class="relative w-11/12 px-2 mx-auto md:px-10">
+      <div class="w-full text-center">
+        <a href="./index.html">
+          <button class="relative px-4 py-2 overflow-hidden font-medium text-blue-400 duration-300 border border-b-4 border-blue-400 rounded-md outline-none bg-blue-950 hover:brightness-150 hover:border-t-4 hover:border-b active:opacity-75 group">
+            <span class="bg-blue-400 shadow-blue-400 absolute -top-[150%] left-0 inline-flex w-80 h-[5px] rounded-md opacity-50 group-hover:top-[150%] duration-500 shadow-[0_0_10px_10px_rgba(0,0,0,0.3)]"></span>
+            Kembali Ke Halaman Utama?
+          </button>
+        </a>
+      </div>
+    </div>
   </div>
   
+ 
 
   <div class="relative flex flex-col ">
 
