--- a/index.html
+++ b/index.html
@@ -815,6 +815,24 @@
       </h1>
       <swiper-container class="relative z-40 mySwiper" loop="true" slides-per-view="2"
       space-between="30" centered-slides="true">
+        <swiper-slide class="!-mr-2 lg:!mr-[30px]">
+          <p class="absolute bottom-0 left-0 z-40 ml-2 text-xs tracking-widest text-left text-white uppercase lg:top-0 lg:text-4xl sm:text-xl font-bebas md:ml-7 lg:mt-7 mb-7 lg:mb-2">Fubuki - Wildan Fathan </p>
+            <a href="https://fubuki.pages.dev/" target="_blank"> 
+            <svg 
+              xmlns="http://www.w3.org/2000/svg" 
+              class="absolute top-0 right-0 z-40 w-6 h-6 mt-4 text-sm duration-200 hover:text-white/80 hover:scale-110 text-white/50 lg:text-lg mr-7 lg:mt-7" 
+              fill="currentColor" 
+              viewBox="0 0 512 512"
+            >
+              <path 
+                d="M384 320c-17.7 0-32 14.3-32 32v96H64V160h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H64C28.7 96 0 124.7 0 160v288c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V352c0-17.7-14.3-32-32-32zm120.5-304.5c-12.5-12.5-32.8-12.5-45.3 0L320 134.6V96c0-17.7-14.3-32-32-32s-32 14.3-32 32V224c0 17.7 14.3 32 32 32H448c17.7 0 32-14.3 32-32s-14.3-32-32-32h-38.6l119.4-119.4c12.5-12.5 12.5-32.8 0-45.3z"
+              />
+            </svg>
+          </a>
+          <div class="absolute bottom-0 z-30 w-full h-20 lg:h-72 bg-gradient-to-b from-transparent to-black"></div>
+          <div class="absolute top-0 z-20 hidden w-full h-12 lg:block md:h-32 bg-gradient-to-t from-transparent to-black/30"></div>
+          <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover" src="./public/images/website/website4.webp" alt="Website Kelas RPL" width="100%" height="100%">
+        </swiper-slide>
         <swiper-slide class ="!-mr-2 lg:!mr-[30px]">
           <p class="absolute bottom-0 left-0 z-40 ml-2 text-xs tracking-widest text-left text-white uppercase lg:top-0 font-bebas md:ml-7 lg:mt-7 mb-7 sm:text-xl lg:text-4xl lg:mb-2">McLaren - Faiz Naufal </p>
             <a href="https://paisnaufl.github.io/McLaren-Web-/" target="_blank"> 
@@ -835,7 +853,7 @@
           <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover object-bottom" src="./public/images/website/website1.webp" alt="Website Kelas RPL" width="100%" height="100%">
         </swiper-slide>
         <swiper-slide class="!-mr-2 lg:!mr-[30px]">
-          <p class="absolute bottom-0 left-0 z-40 ml-2 text-xs tracking-widest text-left text-white uppercase lg:top-0 font-bebas md:ml-7 lg:mt-7 mb-7 sm:text-xl lg:text-4xl lg:mb-2">Undangan Pernikahan By Rahsya Benova </p>
+          <p class="absolute bottom-0 left-0 z-40 ml-2 text-xs tracking-widest text-left text-white uppercase lg:top-0 font-bebas md:ml-7 lg:mt-7 mb-7 sm:text-xl lg:text-4xl lg:mb-2">Undangan Pernikahan - Rahsya Benova </p>
             <a href="https://rahsyabenova.github.io/undangan-pernikahan/" target="_blank"> 
             <svg 
               xmlns="http://www.w3.org/2000/svg" 
@@ -853,7 +871,7 @@
           <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover" src="./public/images/website/website2.webp" alt="Website Kelas RPL" width="100%" height="100%">
         </swiper-slide>
         <swiper-slide class="!-mr-2 lg:!mr-[30px]">
-          <p class="absolute bottom-0 left-0 z-40 ml-2 text-xs tracking-widest text-left text-white uppercase lg:top-0 lg:text-4xl sm:text-xl font-bebas md:ml-7 lg:mt-7 mb-7 lg:mb-2">Lorem ipsum dolor sit amet </p>
+          <p class="absolute bottom-0 left-0 z-40 ml-2 text-xs tracking-widest text-left text-white uppercase lg:top-0 lg:text-4xl sm:text-xl font-bebas md:ml-7 lg:mt-7 mb-7 lg:mb-2">Portofolio - El-Idrisi</p>
             <a href="https://el-idrisi.github.io/" target="_blank"> 
             <svg 
               xmlns="http://www.w3.org/2000/svg" 
@@ -871,25 +889,7 @@
           <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover object-bottom" src="./public/images/website/website3.webp" alt="Website Kelas RPL" width="100%" height="100%">
         </swiper-slide>
         <swiper-slide class="!-mr-2 lg:!mr-[30px]">
-          <p class="absolute bottom-0 left-0 z-40 ml-2 text-xs tracking-widest text-left text-white uppercase lg:top-0 lg:text-4xl sm:text-xl font-bebas md:ml-7 lg:mt-7 mb-7 lg:mb-2">Lorem ipsum dolor sit amet </p>
-            <a href="https://paisnaufl.github.io/NewJeans_PAIS/" target="_blank"> 
-            <svg 
-              xmlns="http://www.w3.org/2000/svg" 
-              class="absolute top-0 right-0 z-40 w-6 h-6 mt-4 text-sm duration-200 hover:text-white/80 hover:scale-110 text-white/50 lg:text-lg mr-7 lg:mt-7" 
-              fill="currentColor" 
-              viewBox="0 0 512 512"
-            >
-              <path 
-                d="M384 320c-17.7 0-32 14.3-32 32v96H64V160h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H64C28.7 96 0 124.7 0 160v288c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V352c0-17.7-14.3-32-32-32zm120.5-304.5c-12.5-12.5-32.8-12.5-45.3 0L320 134.6V96c0-17.7-14.3-32-32-32s-32 14.3-32 32V224c0 17.7 14.3 32 32 32H448c17.7 0 32-14.3 32-32s-14.3-32-32-32h-38.6l119.4-119.4c12.5-12.5 12.5-32.8 0-45.3z"
-              />
-            </svg>
-          </a>
-          <div class="absolute bottom-0 z-30 w-full h-20 lg:h-72 bg-gradient-to-b from-transparent to-black"></div>
-          <div class="absolute top-0 z-20 hidden w-full h-12 lg:block md:h-32 bg-gradient-to-t from-transparent to-black/30"></div>
-          <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover" src="./public/images/website/website4.webp" alt="Website Kelas RPL" width="100%" height="100%">
-        </swiper-slide>
-        <swiper-slide class="!-mr-2 lg:!mr-[30px]">
-          <p class="absolute bottom-0 left-0 z-40 ml-2 text-xs tracking-widest text-left text-white uppercase lg:top-0 lg:text-4xl sm:text-xl font-bebas md:ml-7 lg:mt-7 mb-7 lg:mb-2">Lorem ipsum dolor sit amet</p>
+          <p class="absolute bottom-0 left-0 z-40 ml-2 text-xs tracking-widest text-left text-white uppercase lg:top-0 lg:text-4xl sm:text-xl font-bebas md:ml-7 lg:mt-7 mb-7 lg:mb-2">Portofolio - Taufik</p>
             <a href="https://mtaufik31.github.io/Portfolio.Tailwind.CSS/" target="_blank"> 
             <svg 
               xmlns="http://www.w3.org/2000/svg" 
@@ -907,7 +907,7 @@
           <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover" src="./public/images/website/website5.webp" alt="Website Kelas RPL" width="100%" height="100%">
         </swiper-slide>
         <swiper-slide class="!-mr-2 lg:!mr-[30px]">
-          <p class="absolute bottom-0 left-0 z-40 ml-2 text-xs tracking-widest text-left text-white uppercase lg:top-0 lg:text-4xl sm:text-xl font-bebas md:ml-7 lg:mt-7 mb-7 lg:mb-2">Lorem ipsum dolor sit amet </p>
+          <p class="absolute bottom-0 left-0 z-40 ml-2 text-xs tracking-widest text-left text-white uppercase lg:top-0 lg:text-4xl sm:text-xl font-bebas md:ml-7 lg:mt-7 mb-7 lg:mb-2">Laundry - Dhafin </p>
             <a href="https://dhafinnn.github.io/Dhafin-laundry/IndividuWork/" target="_blank"> 
             <svg 
               xmlns="http://www.w3.org/2000/svg" 
@@ -925,7 +925,7 @@
           <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover" src="./public/images/website/website6.webp" alt="Website Kelas RPL" width="100%" height="100%">
         </swiper-slide>
         <swiper-slide class="!-mr-2 lg:!mr-[30px]">
-          <p class="absolute bottom-0 left-0 z-40 ml-2 text-xs tracking-widest text-left text-white uppercase lg:top-0 lg:text-4xl sm:text-xl font-bebas md:ml-7 lg:mt-7 mb-7 lg:mb-2">Lorem ipsum dolor sit amet </p>
+          <p class="absolute bottom-0 left-0 z-40 ml-2 text-xs tracking-widest text-left text-white uppercase lg:top-0 lg:text-4xl sm:text-xl font-bebas md:ml-7 lg:mt-7 mb-7 lg:mb-2">Portfolio - Silva</p>
             <a href="https://cipa01.github.io/" target="_blank"> 
             <svg 
               xmlns="http://www.w3.org/2000/svg" 
@@ -965,6 +965,93 @@
   </div>
 </section>
 
+
+
+<section class="p-4 pb-20 2xl:py-40" x-data="{ showContent: false }">
+  <div class="container px-4 mx-auto"></div>
+  <section x-data="{ category: 'laboratorium' }" class="relative pb-20 overflow-hidden">
+    <div class="container relative px-4 mx-auto lg:px-28 p">
+      <div class="relative mb-16 text-center">
+        <h1 class="relative z-20 max-w-5xl pb-10 mx-auto mb-4 text-4xl leading-none tracking-tight text-center text-white md:text-5xl xl:text-6xl matrix-text" data-aos="zoom-out-down">
+          Galeri <br>
+      </h1>
+      <button class="relative z-10 h-12 p-2 overflow-hidden text-xl font-bold text-blue-400 border border-b-4 border-blue-400 rounded-md cursor-pointer bg-blue-950 w-52 group">
+        <p> More?</p>
+        <span class="absolute w-56 h-32 transition-transform duration-1000 origin-right transform scale-x-0 -top-8 -left-2 bg-sky-200 rotate-12 group-hover:scale-x-100 group-hover:duration-500"></span>
+      <span class="absolute w-56 h-32 transition-transform duration-700 origin-right transform scale-x-0 -top-8 -left-2 bg-sky-400 rotate-12 group-hover:scale-x-100 group-hover:duration-700"></span>
+      <span class="absolute w-56 h-32 transition-transform duration-500 origin-right transform scale-x-0 -top-8 -left-2 bg-blue-950 rotate-12 group-hover:scale-x-100 group-hover:duration-1000"></span>
+      <span class="group-hover:opacity-100 group-hover:duration-1000 duration-100 opacity-0 absolute top-2.5 left-6 z-10">More Photo?!</span>
+    </button>
+
+          <div class="relative flex flex-wrap pt-10 -mx-4">
+            <!-- kanan <-- i add this cuz i dont fucking know  -->
+            <div class="w-full px-4 mb-8 lg:w-1/3 lg:mb-0">
+              <div class="relative flex items-end !text-white p-6 mb-8 rounded-3xl overflow-hidden group hover:shadow-2xl duration-300 hover:scale-105 hover:shadow-blue-900/50 "
+              style="height: 400px; border: 3px solid rgb(126, 118, 118);">
+              <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-full" 
+              src="./public/images/kelas-rpl/jurusan-1.webp" alt="">
+              <a href="./public/images/kelas-rpl/jurusan-1.webp" loading="lazy" decoding="async" data-fancybox="kelas-galeri" target="_blank">
+                <div class="relative">
+                  <div class="flex items-center justify-between mb-20">
+                    <span class="transition duration-100 transform group-hover:text-white group-hover:translate-x-1 group-hover:-translate-y-1"></span>
+                  </div>
+                  <div class="relative z-50 max-w-lg duration-300 translate-y-5 opacity-0 group-hover:opacity-100 group-hover:translate-y-0">
+                    <h4 class="mb-3 text-3xl font-medium text-white">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</h4>
+                  </div>
+                </div>
+                <div class="absolute bottom-0 left-0 z-10 w-full h-56 duration-300 opacity-0 bg-gradient-to-t from-black to-transparent group-hover:opacity-100"
+                style="height: 400px;"></div>
+              </a>
+            </div>
+
+            </div>
+            <!-- middle <-- i add this cuz i dont fucking know  -->
+          <div class="w-full px-4 mb-8 lg:w-1/3 lg:mb-0">
+            <div class="relative flex items-end !text-white p-6 mb-8 rounded-3xl overflow-hidden group hover:shadow-2xl duration-300 hover:scale-105 hover:shadow-blue-900/50 "
+              style="height: 400px; border: 3px solid rgb(126, 118, 118);">
+              <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-full" 
+              src="./public/images/kelas-rpl/jurusan-2.webp" alt="">
+              <a href="./public/images/kelas-rpl/jurusan-2.webp" loading="lazy" decoding="async" data-fancybox="kelas-galeri" target="_blank">
+                <div class="relative">
+                  <div class="flex items-center justify-between mb-20">
+                    <span class="transition duration-100 transform group-hover:text-white group-hover:translate-x-1 group-hover:-translate-y-1"></span>
+                  </div>
+                  <div class="relative z-50 max-w-lg duration-300 translate-y-5 opacity-0 group-hover:opacity-100 group-hover:translate-y-0">
+                    <h4 class="mb-3 text-3xl font-medium text-white">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</h4>
+                  </div>
+                </div>
+                <div class="absolute bottom-0 left-0 z-10 w-full h-56 duration-300 opacity-0 bg-gradient-to-t from-black to-transparent group-hover:opacity-100"
+                style="height: 400px;"></div>
+              </a>
+            </div>
+
+            
+          </div>
+            <!-- tengah <-- i add this cuz i dont fucking know  -->
+          <div class="w-full px-4 lg:w-1/3">
+            <div class="relative flex items-end !text-white p-6 mb-8 rounded-3xl overflow-hidden group hover:scale-105 hover:shadow-2xl duration-300 hover:shadow-red-600/50 "
+            style="height: 400px; border: 3px solid rgb(126, 118, 118);">
+              <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-full" 
+              src="./public/images/kelas-rpl/kelas-rpl-10-11.webp"  alt="">
+              <a href="./public/images/kelas-rpl/kelas-rpl-10-11.webp" loading="lazy" decoding="async" data-fancybox="kelas-galeri" target="_blank">
+                <div class="relative">
+                  <div class="flex items-center justify-between mb-20">
+                    <span class="transition duration-100 transform group-hover:text-white group-hover:translate-x-1 group-hover:-translate-y-1"></span>
+                  </div>
+                  <div class="relative z-50 max-w-lg duration-300 translate-y-5 opacity-0 group-hover:opacity-100 group-hover:translate-y-0">
+                    <h4 class="mb-3 text-3xl font-medium text-white">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</h4>
+                  </div>
+                </div>
+                <div class="absolute bottom-0 left-0 z-10 w-full h-64 duration-300 opacity-0 bg-gradient-to-t from-black to-transparent group-hover:opacity-100"
+                style="height: 400px;"></div>
+              </a>
+            </div>
+          </div>
+          </div>
+      </div>
+    </div>
+  </section>
+</section>
 
 
 
