--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
               <h3 class="mb-2 text-2xl font-semibold text-blue-400" data-aos="fade-up">Kompetensi/Materi yang diajarkan</h3>
 
 
-              <div class="flex-wrap hidden gap-1 text-xs sm:flex md:text-sm lg:text-md xl:text-lg">
+              <div class="flex-wrap hidden gap-1 text-xs sm:flex md:text-sm lg:text-md xl:text-lg " data-aos="fade-up-right">
                 <p>
                   Sistem Komputer, &nbsp;
                 </p>
@@ -814,7 +814,7 @@
         Website <br>
       </h1>
       <swiper-container class="relative z-40 mySwiper" loop="true" slides-per-view="2"
-      space-between="30" centered-slides="true">
+      space-between="30" centered-slides="true" data-aos="zoom-in">
         <swiper-slide class="!-mr-2 lg:!mr-[30px]">
           <p class="absolute bottom-0 left-0 z-40 ml-2 text-xs tracking-widest text-left text-white uppercase lg:top-0 lg:text-4xl sm:text-xl font-bebas md:ml-7 lg:mt-7 mb-7 lg:mb-2">Fubuki - Wildan Fathan </p>
             <a href="https://fubuki.pages.dev/" target="_blank"> 
@@ -951,10 +951,10 @@
 <section id="kelas" class="relative p-4 pt-20 pb-20 text-white">
   <div class="absolute inset-0" style="background-color: rgba(0, 0, 0, 0.466);"></div>
   <div class="container relative w-11/12 px-2 mx-auto md:px-10">
-    <h1 class="mb-5 lg:mb-10 text-xl lg:text-3xl font-semibold leading-1.2 w-full text-white text-center uppercase">
-      KELAS PPLG
+    <h1 class="max-w-5xl py-5 mx-auto mb-4 text-4xl leading-none tracking-tight text-center text-white md:text-5xl xl:text-6xl" data-aos="zoom-out-down">
+      Kelas PPLG <br>
     </h1>
-    <div class="w-full text-center">
+    <div class="w-full text-center" data-aos="fade-in">
       <a href="./index.html">
         <button class="relative px-4 py-2 overflow-hidden font-medium text-blue-400 duration-300 border border-b-4 border-blue-400 rounded-md outline-none bg-blue-950 hover:brightness-150 hover:border-t-4 hover:border-b active:opacity-75 group">
           <span class="bg-blue-400 shadow-blue-400 absolute -top-[150%] left-0 inline-flex w-80 h-[5px] rounded-md opacity-50 group-hover:top-[150%] duration-500 shadow-[0_0_10px_10px_rgba(0,0,0,0.3)]"></span>
@@ -967,15 +967,15 @@
 
 
 
-<section  class="relative pb-20 overflow-hidden" id="galeri">
+<section  class="relative pt-20 pb-20 overflow-hidden" id="galeri">
   <div class="absolute inset-0" style="background-color: rgba(0, 0, 0, 0.466);"></div>
   <div class="container relative px-4 mx-auto lg:px-28 p">
     
     <div class="relative mb-16 text-center">
-      <h1 class="relative z-20 max-w-5xl pb-10 mx-auto mb-4 text-4xl leading-none tracking-tight text-center text-white md:text-5xl xl:text-6xl matrix-text" data-aos="zoom-out-down">
+      <h1 class="max-w-5xl py-5 mx-auto mb-4 text-4xl leading-none tracking-tight text-center text-white md:text-5xl xl:text-6xl" data-aos="zoom-out-down">
         Galeri <br>
-    </h1>
-    <a href="./galeri.html">
+      </h1>
+    <a href="./galeri.html" data-aos="fade-in"> 
       <button class="relative z-10 h-12 p-2 overflow-hidden text-xl font-bold text-blue-400 border border-b-4 border-blue-400 rounded-md cursor-pointer bg-blue-950 w-52 group">
           <p> View More?</p>
           <span class="absolute w-56 h-32 transition-transform duration-1000 origin-right transform scale-x-0 -top-8 -left-2 bg-sky-200 rotate-12 group-hover:scale-x-100 group-hover:duration-500"></span>
@@ -987,8 +987,8 @@
 
       <div class="relative flex flex-wrap pt-10 -mx-4">
         <!-- kanan <-- i add this cuz i dont fucking know  -->
-        <div class="w-full px-4 mb-8 lg:w-1/3 lg:mb-0">
-          <div class="relative flex items-end !text-white p-6 mb-8 rounded-3xl overflow-hidden group hover:shadow-2xl duration-300 hover:scale-105 hover:shadow-blue-900/50 "
+        <div class="w-full px-4 mb-8 lg:w-1/3 lg:mb-0" data-aos="fade-up-right">
+          <div class="relative flex items-end !text-white p-6 mb-8 rounded-3xl overflow-hidden group hover:shadow-2xl duration-300 hover:scale-105 hover:shadow-amber-600/50 "
           style="height: 400px; border: 3px solid rgb(126, 118, 118);">
           <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-full" 
           src="./public/images/kelas-rpl/jurusan-1.webp" alt="">
@@ -1008,8 +1008,8 @@
 
         </div>
         <!-- middle <-- i add this cuz i dont fucking know  -->
-         <div class="w-full px-4 mb-8 lg:w-1/3 lg:mb-0">
-          <div class="relative flex items-end !text-white p-6 mb-8 rounded-3xl overflow-hidden group hover:shadow-2xl duration-300 hover:scale-105 hover:shadow-blue-900/50 "
+         <div class="w-full px-4 mb-8 lg:w-1/3 lg:mb-0" data-aos="fade-up">
+          <div class="relative flex items-end !text-white p-6 mb-8 rounded-3xl overflow-hidden group hover:shadow-2xl duration-300 hover:scale-105 hover:shadow-amber-600/50 "
             style="height: 400px; border: 3px solid rgb(126, 118, 118);">
             <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-full" 
             src="./public/images/kelas-rpl/jurusan-2.webp" alt="">
@@ -1030,8 +1030,8 @@
         
       </div>
         <!-- tengah <-- i add this cuz i dont fucking know  -->
-      <div class="w-full px-4 lg:w-1/3">
-        <div class="relative flex items-end !text-white p-6 mb-8 rounded-3xl overflow-hidden group hover:scale-105 hover:shadow-2xl duration-300 hover:shadow-red-600/50 "
+      <div class="w-full px-4 lg:w-1/3 "data-aos="fade-up-left">
+        <div class="relative flex items-end !text-white p-6 mb-8 rounded-3xl overflow-hidden group hover:scale-105 hover:shadow-2xl duration-300 hover:shadow-amber-600/50 "
         style="height: 400px; border: 3px solid rgb(126, 118, 118);">
           <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-full" 
           src="./public/images/kelas-rpl/kelas-rpl-10-11.webp"  alt="">
