--- a/kelas12.html
+++ b/kelas12.html
@@ -275,40 +275,37 @@
     </div>
 </section>
  
-<div class="relative flex flex-col ">
-    <div class="absolute top-0 left-0 z-10 w-full bg-gradient-to-b from-black via-transparent to-transparent h-44"></div>
+
+<div class="relative flex flex-col " id="footer">
   
-        <footer class="w-full p-4 pt-10 pb-10">
-            
-
-            <div class="px-4 mx-auto max-w-7xl sm:px-6 lg:px-8">
-                
-
-            <div class="max-w-3xl mx-auto">
-            <a href="https://github.com/zavents" target="_blank" class="flex justify-center ">
-            <img loading="lazy" src="./public/images/icon/pplg-white-full-icon.svg" loading="lazy" width="250px" alt="Logo PPLG FULL">
-            </a>
-            <ul class="flex flex-col items-center justify-center py-10 mb-10 text-lg transition-all duration-500 border-b border-gray-200 gap-7 md:flex-row md:gap-12">
+    <div class="absolute inset-0 -z-10" style="background-color: rgba(0, 0, 0, 0.466);"></div>
+    <footer class="w-full p-4 pt-10 pb-10">
+      <div class="px-4 mx-auto max-w-7xl sm:px-6 lg:px-8">
+        <div class="max-w-3xl mx-auto">
+          <a href="javascript:void(0)"  class="flex justify-center ">
+          <img loading="lazy" src="./public/images/icon/pplg-white-full-icon.svg" loading="lazy" width="250px" alt="Logo PPLG FULL">
+          </a>
+          <ul class="flex flex-col items-center justify-center py-10 mb-10 text-lg transition-all duration-500 border-b border-gray-200 gap-7 md:flex-row md:gap-12">
             <li>
-                <a href="#" target="_blank" class="text-white hover:text-gray-400">About</a>
+                <a href="#about"  class="text-white hover:text-gray-400">About</a>
             </li>
             <li>
-                <a href="#" target="_blank" class="text-white hover:text-gray-400">Guru </a>
+                <a href="#guru"  class="text-white hover:text-gray-400">Guru </a>
             </li>
             <li>
-                <a href="#" target="_blank" class="text-white hover:text-gray-400">Fasilitas</a>
+                <a href="#fasilitas"  class="text-white hover:text-gray-400">Fasilitas</a>
             </li>
             <li>
-                <a href="#" target="_blank" class="text-white hover:text-gray-400">Kelas</a>
+                <a href="./kelas.html" class="text-white hover:text-gray-400">Kelas</a>
             </li>
             <li>
-                <a href="#" target="_blank" class="text-white hover:text-gray-400">Website</a>
+                <a href="#website"  class="text-white hover:text-gray-400">Website</a>
             </li>
             <li>
-                <a href="#" target="_blank" class="text-white hover:text-gray-400">Galeri</a>
+                <a href="./galeri.html"  class="text-white hover:text-gray-400">Galeri</a>
             </li>
-            </ul>
-            <div class="flex items-center justify-center mb-10 space-x-10">
+          </ul>
+          <div class="flex items-center justify-center mb-10 space-x-10">
             <a href="https://x.com/wildanzv" target="_blank" class="block text-white transition-all duration-100 hover:text-gray-400 ">
                 <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path id="Vector" d="M17.5667 14.7386L24.072 7.33936H22.5305L16.8819 13.764L12.3704 7.33936H7.16699L13.9892 17.0546L7.16699 24.8139H8.70862L14.6736 18.0292L19.4381 24.8139H24.6415L17.5663 14.7386H17.5667ZM15.4552 17.1402L14.764 16.1728L9.2641 8.47491H11.632L16.0704 14.6873L16.7617 15.6548L22.5312 23.73H20.1633L15.4552 17.1406V17.1402Z" fill="currentColor" />
@@ -334,12 +331,12 @@
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M26.3106 1.27838C27.5782 1.62071 28.5745 2.61957 28.9113 3.88573C29.524 6.18356 29.524 10.9809 29.524 10.9809C29.524 10.9809 29.524 15.7782 28.9113 18.076C28.5698 19.3469 27.5735 20.3457 26.3106 20.6834C24.0186 21.2977 14.8226 21.2977 14.8226 21.2977C14.8226 21.2977 5.63122 21.2977 3.33456 20.6834C2.06695 20.3411 1.07063 19.3422 0.73385 18.076C0.121094 15.7782 0.121094 10.9809 0.121094 10.9809C0.121094 10.9809 0.121094 6.18356 0.73385 3.88573C1.07531 2.61488 2.07162 1.61602 3.33456 1.27838C5.63122 0.664062 14.8226 0.664062 14.8226 0.664062C14.8226 0.664062 24.0186 0.664062 26.3106 1.27838ZM19.5234 10.9809L11.885 15.403V6.55872L19.5234 10.9809Z" fill="currentColor"></path>
                 </svg>
             </a>
-            </div>
-            <span class="block text-lg text-center text-gray-100"><a href="https://github.com/zavents" target="_blank">Zavents</a> 2024, All rights reserved.</span>
-            </div>
-            </div>
-        </footer>
-</div>
+          </div>
+          <span class="block text-lg text-center text-gray-100"><a href="https://github.com/zavents" target="_blank">Zavents</a> 2024, All rights reserved.</span>
+        </div>
+      </div>
+    </footer>
+  </div>
 
 
     <script src="./public/js/bundle.min.js"></script>
