--- a/index.html
+++ b/index.html
@@ -955,7 +955,7 @@
       Kelas PPLG <br>
     </h1>
     <div class="w-full text-center" data-aos="fade-in">
-      <a href="./index.html">
+      <a href="./kelas.html">
         <button class="relative px-4 py-2 overflow-hidden font-medium text-blue-400 duration-300 border border-b-4 border-blue-400 rounded-md outline-none bg-blue-950 hover:brightness-150 hover:border-t-4 hover:border-b active:opacity-75 group">
           <span class="bg-blue-400 shadow-blue-400 absolute -top-[150%] left-0 inline-flex w-80 h-[5px] rounded-md opacity-50 group-hover:top-[150%] duration-500 shadow-[0_0_10px_10px_rgba(0,0,0,0.3)]"></span>
           Buka Kelas PPLG
