--- a/kelas10.html
+++ b/kelas10.html
@@ -192,13 +192,10 @@
   </style>
   
 <section class="relative">
-    <!-- Gradient Overlay -->
     <div class="absolute bottom-0 left-0 z-30 w-full h-full bg-gradient-to-b from-transparent to-black"></div>
-    
-    <!-- Transparent Overlay -->
+   
     <div class="absolute inset-0" style="background-color:rgba(0, 0, 0, 0.534)"></div>
 
-    <!-- Content Section -->
     <div class="absolute left-0 z-40 flex flex-col justify-center w-full h-full gap-3 p-4 py-32 mt-10 sm:max-w-xl lg:max-w-3xl xs:gap-5 sm:px-32 sm:mt-0 md:-mt-20 xs:py-20">
         <h1 class="text-xl font-bold leading-tight text-white xs:text-3xl lg:text-5xl xl:text-6xl">
             PENGEMBANGAN PERANGKAT <br> LUNAK DAN GIM
@@ -206,12 +203,10 @@
         <p class="text-sm text-white lg:text-lg leading-thight">Kelas 10</p>
     </div>
 
-    <!-- Background Image -->
     <div>
         <img loading="lazy" decoding="async" class="object-cover w-full h-full max-h-screen" src="./public/images/kelas-rpl/kelas-rpl-10-ppl-4.webp" alt="">
     </div>
 
-    <!-- Info Box -->
     <div class="container absolute inset-x-0 left-0 z-40 flex items-start justify-center w-full mx-auto center -bottom-16 xs:-bottom-10 sm:bottom-14 gap-7 px-28">
         <div class="flex items-center max-w-sm gap-3 md:items-start">
 
@@ -224,19 +219,17 @@
         </div>
     </div>
 
-    <!-- Divider -->
     <div class="container max-w-xs sm:max-w-lg lg:max-w-3xl xl:max-w-6xl absolute -bottom-20 xs:-bottom-13 sm:bottom-5 bg-white h-[1px] z-40 mx-auto inset-x-0 px-28"></div>
 
-    <!-- Navigation Buttons -->
     <button class="absolute z-50 flex items-center justify-center w-10 h-10 text-black transition transform -translate-y-1/2 bg-white rounded-full shadow-md arrow arrow-left left-5 top-1/2 hover:bg-gray-100">
-        <a href="#">
+        <a href="./kelas12.html">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5L8.25 12l7.5-7.5" />
             </svg>
        </a>
     </button>
     <button class="absolute z-50 flex items-center justify-center w-10 h-10 text-black transition transform -translate-y-1/2 bg-white rounded-full shadow-md arrow arrow-right right-5 top-1/2 hover:bg-gray-100">
-        <a href="">
+        <a href="./kelas11.html">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
             </svg>
