--- a/index.html
+++ b/index.html
@@ -210,7 +210,6 @@
         aria-controls="navbarSupportedContent14"
         aria-expanded="false"
         aria-label="Toggle navigation">
-        <!-- Hamburger icon -->
         <span
         class="[&>svg]:w-7 [&>svg]:stroke-white dark:[&>svg]:stroke-neutral-200">
         <svg
@@ -225,14 +224,12 @@
         </span>
     </button>
   
-        <!-- Collapsible navbar container -->
         <div
             class="!visible mt-2 hidden flex-grow basis-[100%] items-center lg:mt-0 lg:!flex lg:basis-auto justify-center"
             id="navbarSupportedContent14"
             data-twe-collapse-item>
-            <!-- Left links -->
             <ul class="flex flex-col justify-center lg:rounded-full lg:bg-white list-style-none lg:flex-row ms-auto lg:bg-opacity-10" data-twe-navbar-nav-ref>
-            <!-- Home link -->
+
                 <li class="py-2 ps-1" data-twe-nav-item-ref>
                     <a class="px-3 py-2 text-lg tracking-wider text-white transition-transform hover:text-gray-300 lg:rounded-full lg:hover:bg-white lg:hover:bg-opacity-20" 
                     aria-current="page" href="#about"data-twe-nav-link-ref>About</a>
@@ -247,7 +244,7 @@
                 </li>
                 <li class="py-2 ps-1" data-twe-nav-item-ref>
                     <a class="px-3 py-2 text-lg tracking-wider text-white transition-transform rounded-full hover:text-gray-300 hover:bg-white hover:bg-opacity-20" 
-                    aria-current="page" href="./kelas.html"data-twe-nav-link-ref>Kelas</a>
+                    aria-current="page" href="#kelas"data-twe-nav-link-ref>Kelas</a>
                 </li>
                 <li class="py-2 ps-1" data-twe-nav-item-ref>
                     <a class="px-3 py-2 text-lg tracking-wider text-white transition-transform rounded-full hover:text-gray-300 hover:bg-white hover:bg-opacity-20" 
