--- a/kelas10.html
+++ b/kelas10.html
@@ -98,7 +98,6 @@
     aria-controls="navbarSupportedContent14"
     aria-expanded="false"
     aria-label="Toggle navigation">
-    <!-- Hamburger icon -->
     <span
     class="[&>svg]:w-7 [&>svg]:stroke-white dark:[&>svg]:stroke-neutral-200">
     <svg
@@ -113,37 +112,34 @@
     </span>
 </button>
 
-    <!-- Collapsible navbar container -->
     <div
         class="!visible mt-2 hidden flex-grow basis-[100%] items-center lg:mt-0 lg:!flex lg:basis-auto justify-center"
         id="navbarSupportedContent14"
         data-twe-collapse-item>
-        <!-- Left links -->
         <ul class="flex flex-col justify-center lg:rounded-full lg:bg-white list-style-none lg:flex-row ms-auto lg:bg-opacity-10" data-twe-navbar-nav-ref>
-        <!-- Home link -->
             <li class="py-2 ps-1" data-twe-nav-item-ref>
                 <a class="px-3 py-2 text-lg tracking-wider text-white transition-transform hover:text-gray-300 lg:rounded-full lg:hover:bg-white lg:hover:bg-opacity-20" 
-                aria-current="page" href="#about"data-twe-nav-link-ref>About</a>
+                aria-current="page" href="./index.html#about"data-twe-nav-link-ref>About</a>
             </li>
             <li class="py-2 ps-1" data-twe-nav-item-ref>
                 <a class="px-3 py-2 text-lg tracking-wider text-white transition-transform rounded-full hover:text-gray-300 hover:bg-white hover:bg-opacity-20" 
-                aria-current="page" href="#guru"data-twe-nav-link-ref>Guru</a>
+                aria-current="page" href="./index.html#guru"data-twe-nav-link-ref>Guru</a>
             </li>
             <li class="py-2 ps-1" data-twe-nav-item-ref>
                 <a class="px-3 py-2 text-lg tracking-wider text-white transition-transform rounded-full hover:text-gray-300 hover:bg-white hover:bg-opacity-20" 
-                aria-current="page" href="#fasilitas"data-twe-nav-link-ref>Fasilitas</a>
+                aria-current="page" href="./index.html#fasilitas"data-twe-nav-link-ref>Fasilitas</a>
             </li>
             <li class="py-2 ps-1" data-twe-nav-item-ref>
                 <a class="px-3 py-2 text-lg tracking-wider text-white transition-transform rounded-full hover:text-gray-300 hover:bg-white hover:bg-opacity-20" 
-                aria-current="page" href="./kelas.html"data-twe-nav-link-ref>Kelas</a>
+                aria-current="page" href="/index.html#kelas"data-twe-nav-link-ref>Kelas</a>
             </li>
             <li class="py-2 ps-1" data-twe-nav-item-ref>
                 <a class="px-3 py-2 text-lg tracking-wider text-white transition-transform rounded-full hover:text-gray-300 hover:bg-white hover:bg-opacity-20" 
-                aria-current="page" href="#website"data-twe-nav-link-ref>Website</a>
+                aria-current="page" href="./index.html#website"data-twe-nav-link-ref>Website</a>
             </li>
             <li class="py-2 ps-1" data-twe-nav-item-ref>
             <a class="px-3 py-2 text-lg tracking-wider text-white transition-transform rounded-full hover:text-gray-300 hover:bg-white hover:bg-opacity-20" 
-            aria-current="page" href="#photo"data-twe-nav-link-ref>Galeri</a>
+            aria-current="page" href="./index.html#photo"data-twe-nav-link-ref>Galeri</a>
         </li>
         </ul>
 
@@ -157,7 +153,6 @@
 </nav>
 
 <style>
-    /* Default style for arrows (desktop and tablet) */
     .arrow {
       position: absolute;
       top: 50%;
@@ -173,12 +168,11 @@
       right: 10px;
     }
   
-    /* Adjust position for mobile L (425px) */
     @media (max-width: 639px) {
       .arrow {
         margin-top: 10px;
-        top: 110%; /* Position above the "Pembelajaran" section */
-        transform: translateY(0); /* Reset vertical alignment */
+        top: 110%; 
+        transform: translateY(0);
       }
       .arrow-left {
         left: 70px;
