--- a/kelas10.html
+++ b/kelas10.html
@@ -194,7 +194,7 @@
         <h1 class="text-xl font-bold leading-tight text-white xs:text-3xl lg:text-5xl xl:text-6xl">
             PENGEMBANGAN PERANGKAT <br> LUNAK DAN GIM
         </h1>
-        <p class="text-sm text-white lg:text-lg leading-thight">Kelas 10</p>
+        <p class="text-sm text-blue-500 lg:text-lg leading-thight">Kelas 10</p>
     </div>
 
     <div>
@@ -205,7 +205,7 @@
         <div class="flex items-center max-w-sm gap-3 md:items-start">
 
             <div>
-                <h1 class="text-xs font-semibold text-white sm:text-sm md:text-2xl">Pembelajaran</h1>
+                <h1 class="text-xs font-semibold text-blue-500 sm:text-sm md:text-2xl">Pembelajaran</h1>
                 <p class="hidden mt-3 text-white text-xxs md:text-xs md:block">
                     Mempelajari Basic Microsoft Office, Basic Editing (Photoshop dan Coreldraw) Bahasa Program C++ dan juga Bahasa Program Java 
                 </p>
@@ -215,14 +215,14 @@
 
     <div class="container max-w-xs sm:max-w-lg lg:max-w-3xl xl:max-w-6xl absolute -bottom-20 xs:-bottom-13 sm:bottom-5 bg-white h-[1px] z-40 mx-auto inset-x-0 px-28"></div>
 
-    <button class="absolute z-50 flex items-center justify-center w-10 h-10 text-black transition transform -translate-y-1/2 bg-white rounded-full shadow-md arrow arrow-left left-5 top-1/2 hover:bg-gray-100">
+    <button class="absolute z-50 flex items-center justify-center w-10 h-10 text-black transition transform -translate-y-1/2 bg-white  rounded-full shadow-md arrow arrow-left left-5 top-1/2 hover:bg-blue-500">
         <a href="./kelas12.html">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5L8.25 12l7.5-7.5" />
             </svg>
        </a>
     </button>
-    <button class="absolute z-50 flex items-center justify-center w-10 h-10 text-black transition transform -translate-y-1/2 bg-white rounded-full shadow-md arrow arrow-right right-5 top-1/2 hover:bg-gray-100">
+    <button class="absolute z-50 flex items-center justify-center w-10 h-10 text-black transition transform -translate-y-1/2 bg-white rounded-full shadow-md arrow arrow-right right-5 top-1/2 hover:bg-blue-500">
         <a href="./kelas11.html">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
@@ -235,13 +235,13 @@
 
 
 <section class="pt-20 bg-black h-fll md:pt-0">
-    <div class="relative z-10 h-full bg-fixed bg-center bg-cover" style="background-color: rgba(0, 0, 0, 0.912); background-image: url('./public/images/kelashtml/kelas10-bg.webp'); background-blend-mode: overlay;">
+    <div class="relative z-10 h-full bg-fixed bg-center bg-cover" style="background-color: rgba(0, 0, 0, 0.727); background-image: url('./public/images/kelashtml/kelas10-bg.webp'); background-blend-mode: overlay;">
         <div class="absolute top-0 left-0 z-10 w-full bg-gradient-to-b from-black via-transparent to-transparent h-44"></div>
   
         <div class="absolute bottom-0 left-0 z-10 w-full bg-gradient-to-t from-black via-transparent to-transparent h-44"></div>
       
         <div class="p-4 py-10 mx-auto sm:px-32 lg:py-20">
-            <h1 class="text-3xl text-white font-bebas lg:text-6xl">Ringkasan</h1>
+            <h1 class="text-3xl text-blue-500 font-bebas lg:text-6xl">Ringkasan</h1>
             <div class="flex flex-col mt-5 lg:flex-row gap-7">
                 <div class="w-full lg:w-7/12">
                     <p class="text-xs leading-normal text-justify text-white sm:text-sm lg:text-base">
@@ -255,7 +255,7 @@
                     </p>
                 </div>
                 <div class="w-full lg:w-5/12">
-                    <img class="object-cover h-full rounded-es-3xl rounded-se-3xl" loading="lazy" decoding="async" src="./public/images/kelas-rpl/kelas-rpl-10-ppl-1.webp" alt="">
+                    <img class="object-cover h-full rounded-es-3xl rounded-se-3xl" loading="lazy" decoding="async" src="./public/images/kelashtml/kelas10-ringkasan.gif" alt="">
                 </div>
             </div>
         </div>
