--- a/kelas11.html
+++ b/kelas11.html
@@ -233,7 +233,7 @@
 
 
 
-<section class="pt-20 bg-black h-fll md:pt-0">
+<section class="pt-20 bg-black h-fll md:pt-0" id="ringkasan">
     <div class="relative z-10 h-full bg-fixed bg-center bg-cover bg-black/50" style="background-color: rgba(0, 0, 0, 0.712); background-image: url('./public/images/kelashtml/kelas11-bg.webp'); background-blend-mode: overlay;">
         <div class="absolute top-0 left-0 z-10 w-full bg-gradient-to-b from-black via-transparent to-transparent h-44"></div>
   
