--- a/kelas11.html
+++ b/kelas11.html
@@ -246,7 +246,7 @@
                     <p class="text-xs leading-normal text-justify text-white sm:text-sm lg:text-base">
                         Belajar teknologi di kelas 11 membawa tantangan baru yang lebih seru dan aplikatif. Kamu akan mendalami pembuatan website dengan elemen yang lebih kompleks, seperti menambahkan interaktivitas, desain responsif, dan integrasi teknologi pendukung. Pembelajaran ini mengasah keterampilanmu dalam merancang website yang menarik dan fungsional, sesuai kebutuhan zaman.</p>
                     <p class="mt-3 text-xs leading-normal text-justify text-white sm:text-sm lg:text-base">
-                        Selain itu, kamu akan mengembangkan aplikasi menggunakan Android Studio dengan bahasa pemrograman Kotlin dan Dart. Tidak hanya membuat aplikasi sederhana, tetapi juga belajar tentang konsep yang lebih kompleks, seperti penggunaan API atau penyimpanan data. Proyek ini dirancang untuk menambah pemahamanmu dalam pengembangan aplikasi modern.
+                        Selain itu, kamu akan mengembangkan aplikasi menggunakan Android Studio dengan bahasa pemrograman Kotlin dan Dart. Proyek ini dirancang untuk menambah pemahamanmu dalam pengembangan aplikasi modern.
                     </p>
                     <p class="mt-3 text-xs leading-normal text-justify text-white sm:text-sm lg:text-base">
                         Di mata pelajaran MPP, kamu akan mengerjakan proyek berbasis mikrokontroler ESP-32 (Arduino) dengan fokus yang lebih kreatif. Misalnya, membuat running text LED dengan animasi yang variatif atau fitur interaktif lainnya. Dengan materi ini, kamu tak hanya menguasai teknologi, tetapi juga terlatih untuk berpikir inovatif dan solutif!
