--- a/kelas10.html
+++ b/kelas10.html
@@ -131,7 +131,7 @@
             </li>
             <li class="py-2 ps-1" data-twe-nav-item-ref>
                 <a class="px-3 py-2 text-lg tracking-wider text-white transition-transform rounded-full hover:text-gray-300 hover:bg-white hover:bg-opacity-20" 
-                aria-current="page" href="/index.html#kelas"data-twe-nav-link-ref>Kelas</a>
+                aria-current="page" href="./index.html#kelas"data-twe-nav-link-ref>Kelas</a>
             </li>
             <li class="py-2 ps-1" data-twe-nav-item-ref>
                 <a class="px-3 py-2 text-lg tracking-wider text-white transition-transform rounded-full hover:text-gray-300 hover:bg-white hover:bg-opacity-20" 
@@ -139,12 +139,11 @@
             </li>
             <li class="py-2 ps-1" data-twe-nav-item-ref>
             <a class="px-3 py-2 text-lg tracking-wider text-white transition-transform rounded-full hover:text-gray-300 hover:bg-white hover:bg-opacity-20" 
-            aria-current="page" href="./index.html#photo"data-twe-nav-link-ref>Galeri</a>
+            aria-current="page" href="./index.html#galeri"data-twe-nav-link-ref>Galeri</a>
         </li>
         </ul>
 
         
-        <!-- Dropdown -->
     <div class=" ms-auto" data-twe-dropdown-ref>
         <button class=" block py-3.5 uppercase text-xs tracking-px text-white font-bold bg-white bg-opacity-20 hover:bg-opacity-10 transition ease-in rounded-10 transition-transform duration-300 hover:scale-125 px-2">smk negeri 2</button>
     </div>
@@ -198,7 +197,7 @@
     </div>
 
     <div>
-        <img loading="lazy" decoding="async" class="object-cover w-full h-full max-h-screen" src="./public/images/kelas-rpl/kelas-rpl-10-ppl-4.webp" alt="">
+        <img loading="lazy" decoding="async" class="object-cover w-full h-full max-h-screen" src="./public/images/kelas-rpl/kelas-rpl-10-ppl-4.webp" alt="kelas 10 background">
     </div>
 
     <div class="container absolute inset-x-0 left-0 z-40 flex items-start justify-center w-full mx-auto center -bottom-16 xs:-bottom-10 sm:bottom-14 gap-7 px-28">
@@ -255,7 +254,7 @@
                     </p>
                 </div>
                 <div class="w-full lg:w-5/12" >
-                    <img class="object-cover h-full rounded-es-3xl rounded-se-3xl"data-aos-duration="1000" data-aos="fade-left" loading="lazy" decoding="async" src="./public/images/kelashtml/kelas10-ringkasan.gif" alt="">
+                    <img class="object-cover h-full rounded-es-3xl rounded-se-3xl"data-aos-duration="1000" data-aos="fade-left" loading="lazy" decoding="async" src="./public/images/kelashtml/kelas10-ringkasan.gif" alt="kelas 10 gif ringkasan">
                 </div>
             </div>
         </div>
