--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@
           <div class="relative flex items-end p-6 mb-8 overflow-hidden text-white duration-300 card-kelas h-44 md:h-72  rounded-3xl group hover:shadow-2xl hover:scale-105 hover:shadow-amber-100/20"
             style="border: 3px solid rgb(126, 118, 118);" data-aos-duration="1000" data-aos="fade-right">
             <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-44 md:h-72  " 
-              src="./public/images/kelas-rpl/kelas-rpl-10-ppl-3.webp" alt="">
+              src="./public/images/kelas-rpl/kelas-rpl-10-ppl-3.webp" alt="gambar kelas 10">
             <a href="./kelas10.html" loading="lazy" decoding="async"  >
               <div class="relative">
                 <div class="flex items-center justify-between mb-20">
@@ -831,7 +831,7 @@
         <div class="relative flex items-end p-6 mb-8 overflow-hidden text-white duration-300 card-kelas h-44 md:h-72  rounded-3xl group hover:shadow-2xl hover:scale-105 hover:shadow-amber-100/20"
           style="border: 3px solid rgb(126, 118, 118);" data-aos-duration="1000" data-aos="fade-in">
           <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-44 md:h-72  " 
-            src="./public/images/kelas-rpl/kelas-rpl-11-ppl-2.webp" alt="">
+            src="./public/images/kelas-rpl/kelas-rpl-11-ppl-2.webp" alt="gambar kelas 11">
           <a href="./kelas11.html" loading="lazy" decoding="async"  >
             <div class="relative">
               <div class="flex items-center justify-between mb-20">
@@ -855,7 +855,7 @@
       <div class="relative flex items-end p-6 mb-8 overflow-hidden text-white duration-300 card-kelas h-44 md:h-72  rounded-3xl group hover:shadow-2xl hover:scale-105 hover:shadow-amber-100/20"
         style="border: 3px solid rgb(126, 118, 118);" data-aos-duration="1000" data-aos="fade-right">
         <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-44 md:h-72  " 
-          src="./public/images/kelas-rpl/kelas-rpl-11-ppl-2.webp" alt="">
+          src="./public/images/kelas-rpl/kelas-rpl-11-ppl-2.webp" alt="gambar kelas 11">
         <a href="./kelas11.html" loading="lazy" decoding="async"  >
           <div class="relative">
             <div class="flex items-center justify-between mb-20">
@@ -874,7 +874,7 @@
       <div class="relative flex items-end p-6 mb-8 overflow-hidden text-white duration-300 card-kelas h-44 md:h-72  rounded-3xl group hover:shadow-2xl hover:scale-105 hover:shadow-amber-100/20"
         style="border: 3px solid rgb(126, 118, 118);" data-aos-duration="1000" data-aos="fade-left">
         <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-44 md:h-72  " 
-          src="./public/images/kelas-rpl/kelas-rpl-11-ppl-2.webp" alt="">
+          src="./public/images/kelas-rpl/kelas-rpl-11-ppl-2.webp" alt="gambar kelas 11">
         <a href="./kelas11.html" loading="lazy" decoding="async"  >
           <div class="relative">
             <div class="flex items-center justify-between mb-20">
@@ -896,7 +896,7 @@
           <div class="relative flex items-end p-6 mb-8 overflow-hidden text-white duration-300 card-kelas h-44 md:h-72  rounded-3xl group hover:shadow-2xl hover:scale-105 hover:shadow-amber-100/20"
             style="border: 3px solid rgb(126, 118, 118);" data-aos-duration="1000" data-aos="fade-left">
             <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-44 md:h-72  " 
-              src="./public/images/kelas-rpl/kelas-rpl-12-3.webp" alt="">
+              src="./public/images/kelas-rpl/kelas-rpl-12-3.webp" alt="gambar kelas 12">
             <a href="./kelas12.html" loading="lazy" decoding="async"  >
               <div class="relative">
                 <div class="flex items-center justify-between mb-20">
@@ -1090,7 +1090,7 @@
         <div class="flex-row hidden lg:flex gap-4 w-full"data-aos-duration="1000" data-aos="fade-right">
           <div class="w-full">
             <div class="relative flex items-end p-6 mb-8 overflow-hidden text-white duration-300 card-kelas h-44 md:h-72  rounded-3xl group hover:shadow-2xl hover:scale-105 hover:shadow-amber-100/20" style="border: 3px solid rgb(126, 118, 118);height: 400px; ">
-              <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-full" src="./public/images/kelas-rpl/jurusan-1.webp" alt="">
+              <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-full" src="./public/images/kelas-rpl/jurusan-1.webp" alt="gambar jurusan rpl">
               <a href="./public/images/kelas-rpl/jurusan-1.webp" loading="lazy" decoding="async" data-fancybox="kelas-galeri" target="_blank">
                 <div class="relative">
                   <div class="flex items-center justify-between mb-20">
@@ -1110,7 +1110,7 @@
         <div class="flex-row hidden lg:flex gap-4 w-full" data-aos-duration="1000" data-aos="fade-in">
           <div class="w-full">
             <div class="relative flex items-end p-6 mb-8 overflow-hidden text-white duration-300 card-kelas h-44 md:h-72  rounded-3xl group hover:shadow-2xl hover:scale-105 hover:shadow-amber-100/20" style="border: 3px solid rgb(126, 118, 118); height: 400px;">
-              <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-full" src="./public/images/kelas-rpl/jurusan-1.webp" alt="">
+              <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-full" src="./public/images/kelas-rpl/jurusan-1.webp" alt="gambar jurusan pplg">
               <a href="./public/images/kelas-rpl/jurusan-1.webp" loading="lazy" decoding="async" data-fancybox="kelas-galeri" target="_blank">
                 <div class="relative">
                   <div class="flex items-center justify-between mb-20">
@@ -1130,7 +1130,7 @@
     <div class="flex-row flex lg:hidden gap-4 w-full" >
       <div class="w-full"data-aos-duration="1000" data-aos="fade-right">
         <div class="relative flex items-end p-6 mb-8 overflow-hidden text-white duration-300 card-kelas h-44 md:h-72  rounded-3xl group hover:shadow-2xl hover:scale-105 hover:shadow-amber-100/20" style="border: 3px solid rgb(126, 118, 118);">
-          <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-full" src="./public/images/kelas-rpl/jurusan-1.webp" alt="">
+          <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-full" src="./public/images/kelas-rpl/jurusan-1.webp" alt="gambar jurusan pplg">
           <a href="./public/images/kelas-rpl/jurusan-1.webp" loading="lazy" decoding="async" data-fancybox="kelas-galeri" target="_blank">
             <div class="relative">
               <div class="flex items-center justify-between mb-20">
@@ -1146,7 +1146,7 @@
       </div>
       <div class="w-full"data-aos-duration="1000" data-aos="fade-left">
         <div class="relative flex items-end p-6 mb-8 overflow-hidden text-white duration-300 card-kelas h-44 md:h-72  rounded-3xl group hover:shadow-2xl hover:scale-105 hover:shadow-amber-100/20" style="border: 3px solid rgb(126, 118, 118); ">
-          <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-full" src="./public/images/kelas-rpl/jurusan-1.webp" alt="">
+          <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-full" src="./public/images/kelas-rpl/jurusan-1.webp" alt="gambar jurusan pplg">
           <a href="./public/images/kelas-rpl/jurusan-1.webp" loading="lazy" decoding="async" data-fancybox="kelas-galeri" target="_blank">
             <div class="relative">
               <div class="flex items-center justify-between mb-20">
@@ -1164,7 +1164,7 @@
     <div class="w-full">
       <div class="w-full"data-aos-duration="1000" data-aos="fade-left">
         <div class="relative flex items-end p-6 mb-8 overflow-hidden text-white duration-300 card-kelas h-44 md:h-72  rounded-3xl group hover:shadow-2xl hover:scale-105 hover:shadow-amber-100/20" style="border: 3px solid rgb(126, 118, 118); height: 400px;">
-          <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-full" src="./public/images/kelas-rpl/jurusan-1.webp" alt="">
+          <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-full" src="./public/images/kelas-rpl/jurusan-1.webp" alt="gambar jurusan pplg">
           <a href="./public/images/kelas-rpl/jurusan-1.webp" loading="lazy" decoding="async" data-fancybox="kelas-galeri" target="_blank">
             <div class="relative">
               <div class="flex items-center justify-between mb-20">
