--- a/galeri.html
+++ b/galeri.html
@@ -198,7 +198,7 @@ margin: 0;
 <nav id="navbar" class="fixed z-50 flex items-center justify-between w-screen py-4 mx-auto transition-all duration-500 flex-nowrap shadow-dark-mild lg:flex-wrap lg:justify-start backdrop-blur-0" data-twe-navbar-ref>
     <div class="flex flex-wrap items-center justify-between w-full px-8 mx-auto md:px-16">
         <div class="">
-            <a class="text-xl text-white transition-transform duration-300 ease-in rounded-10 hover:scale-125" href="#"><img class="transition-transform duration-300 ease-in rounded-10 hover:scale-125" src="./public/images/icon/pplg-white-icon.svg" style="width: 100px;" alt=""></a>
+            <a class="text-xl text-white transition-transform duration-300 ease-in rounded-10 hover:scale-125" href="#"><img class="transition-transform duration-300 ease-in rounded-10 hover:scale-125" src="./public/images/icon/pplg-white-icon.svg" style="width: 100px;" alt="pplg logo"></a>
         </div>
     <button
         class="relative z-50 block px-2 text-white bg-transparent border-0 hover:no-underline hover:shadow-none focus:no-underline focus:shadow-none focus:outline-none focus:ring-0 lg:hidden"
