--- a/kelas.html
+++ b/kelas.html
@@ -275,7 +275,7 @@ margin: 0;
           <div class="relative flex items-end p-6 mb-8 overflow-hidden text-white duration-300 card-kelas h-44 md:h-72  rounded-3xl group hover:shadow-2xl hover:scale-105 hover:shadow-blue-900/50"
             style="border: 3px solid rgb(126, 118, 118);">
             <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-44 md:h-72  " 
-              src="./public/images/kelas-rpl/kelas-rpl-10-ppl-3.webp" alt="">
+              src="./public/images/kelas-rpl/kelas-rpl-10-ppl-3.webp" alt="gambar kelas rpl ">
             <a href="./kelas10.html" loading="lazy" decoding="async" data-fancybox="gallery" >
               <div class="relative">
                 <div class="flex items-center justify-between mb-20">
@@ -299,7 +299,7 @@ margin: 0;
         <div class="relative flex items-end p-6 mb-8 overflow-hidden text-white duration-300 card-kelas h-44 md:h-72  rounded-3xl group hover:shadow-2xl hover:scale-105 hover:shadow-blue-900/50"
           style="border: 3px solid rgb(126, 118, 118);">
           <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-44 md:h-72  " 
-            src="./public/images/kelas-rpl/kelas-rpl-11-ppl-2.webp" alt="">
+            src="./public/images/kelas-rpl/kelas-rpl-11-ppl-2.webp" alt="gambar kelas rpl ">
           <a href="./kelas11.html" loading="lazy" decoding="async" data-fancybox="gallery" >
             <div class="relative">
               <div class="flex items-center justify-between mb-20">
@@ -323,7 +323,7 @@ margin: 0;
       <div class="relative flex items-end p-6 mb-8 overflow-hidden text-white duration-300 card-kelas h-44 md:h-72  rounded-3xl group hover:shadow-2xl hover:scale-105 hover:shadow-blue-900/50"
         style="border: 3px solid rgb(126, 118, 118);">
         <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-44 md:h-72  " 
-          src="./public/images/kelas-rpl/kelas-rpl-11-ppl-2.webp" alt="">
+          src="./public/images/kelas-rpl/kelas-rpl-11-ppl-2.webp" alt="gambar kelas rpl ">
         <a href="./kelas11.html" loading="lazy" decoding="async" data-fancybox="gallery" >
           <div class="relative">
             <div class="flex items-center justify-between mb-20">
@@ -342,7 +342,7 @@ margin: 0;
       <div class="relative flex items-end p-6 mb-8 overflow-hidden text-white duration-300 card-kelas h-44 md:h-72  rounded-3xl group hover:shadow-2xl hover:scale-105 hover:shadow-blue-900/50"
         style="border: 3px solid rgb(126, 118, 118);">
         <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-44 md:h-72  " 
-          src="./public/images/kelas-rpl/kelas-rpl-11-ppl-2.webp" alt="">
+          src="./public/images/kelas-rpl/kelas-rpl-11-ppl-2.webp" alt="gambar kelas rpl ">
         <a href="./kelas11.html" loading="lazy" decoding="async" data-fancybox="gallery" >
           <div class="relative">
             <div class="flex items-center justify-between mb-20">
@@ -364,7 +364,7 @@ margin: 0;
           <div class="relative flex items-end p-6 mb-8 overflow-hidden text-white duration-300 card-kelas h-44 md:h-72  rounded-3xl group hover:shadow-2xl hover:scale-105 hover:shadow-red-600/50"
             style="border: 3px solid rgb(126, 118, 118);">
             <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-44 md:h-72  " 
-              src="./public/images/kelas-rpl/kelas-rpl-12-3.webp" alt="">
+              src="./public/images/kelas-rpl/kelas-rpl-12-3.webp" alt="gambar kelas rpl ">
             <a href="./kelas12.html" loading="lazy" decoding="async" data-fancybox="gallery" >
               <div class="relative">
                 <div class="flex items-center justify-between mb-20">
