export gambar buat galeri

--- a/kelas.html
+++ b/kelas.html
@@ -458,11 +458,8 @@ margin: 0;
 </div>
 
 
-<script src="./public/js/main.js"></script>
-<script src="./public/js/aos.js"></script>
-
-<script src="./public/js/main.js"></script>
-<script src="./public/js/alpine.js" defer></script>
+<script src="./public/js/bundle.min.js"></script>
+<script src="./public/js/swiperebudnel.js"></script>
 </body>
 </html>
 
